--- a/canal-admin/Dockerfile
+++ b/canal-admin/Dockerfile
@@ -42,11 +42,10 @@ RUN set -eux; \
     rm -f /tmp/canal.admin-*.tar.gz && \
     chown -R ${uid}:${gid} /home/${user} && \
     rm -rf /var/lib/apt/lists/*; \
-    if [ -f /home/${user}/canal-admin/bin/startup.sh ]; then sed -i.bak -e "s@\$JAVA \$JAVA_OPTS@exec gosu ${user} \$JAVA \$JAVA_OPTS@g" -e "s@1>>\$base.*&@@g" -e "s@1>>/dev/null.*&@@g" /home/${user}/canal-admin/bin/startup.sh; fi
+    if [ -f /home/${user}/canal-admin/bin/startup.sh ]; then sed -i.bak -e "s@\$JAVA \$JAVA_OPTS@exec \$JAVA \$JAVA_OPTS@g" -e "s@1>>\$base.*&@@g" -e "s@1>>/dev/null.*&@@g" /home/${user}/canal-admin/bin/startup.sh; fi
 
 
     EXPOSE 8089
 
     WORKDIR /home/${user}/canal-admin
-
-    ENTRYPOINT ["bin/startup.sh"]
+    ENTRYPOINT ["/docker-entrypoint.sh"]
