--- a/.github/workflows/ci-ver.yml
+++ b/.github/workflows/ci-ver.yml
@@ -128,6 +128,7 @@ jobs:
                     latest_tag="${latest_tag} --tag dyrnq/${m}:${ver}-jdk11"
                 fi
 
+                echo "${latest_tag}"
                 docker buildx build \
                 --platform linux/amd64,linux/arm64/v8 \
                 --output "type=image,push=false" \
@@ -178,6 +179,7 @@ jobs:
                     latest_tag="${latest_tag} --tag dyrnq/${m}:${ver}-jdk11"
                 fi
 
+                echo "${latest_tag}"
                 docker buildx build \
                 --platform linux/amd64,linux/arm64/v8 \
                 --output "type=image,push=false" \
