--- a/.github/workflows/ci-main.yml
+++ b/.github/workflows/ci-main.yml
@@ -11,7 +11,7 @@ on:
     branches: [ "main" ]
     paths-ignore:
       - 'README.md'
-      - 'usage-demo'
+      - 'usage-demo/**'
       - '.gitignore'
   workflow_dispatch:
 jobs:
