--- a/.github/workflows/ci-main.yml
+++ b/.github/workflows/ci-main.yml
@@ -5,7 +5,7 @@ on:
     branches: [ "main" ]
     paths-ignore:
       - 'README.md'
-      - 'usage-demo'
+      - 'usage-demo/**'
       - '.gitignore'
   pull_request:
     branches: [ "main" ]
