--- a/usage-demo/k8s/deployments.yaml
+++ b/usage-demo/k8s/deployments.yaml
@@ -1,3 +1,105 @@
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: canal-mysql-initdb
+data:
+  initdb.sql: |
+    create database if not exists canal_tsdb default character set utf8mb4 collate utf8mb4_unicode_ci;
+    use canal_tsdb;
+    CREATE TABLE IF NOT EXISTS `meta_snapshot` (
+      `id` bigint(20) unsigned NOT NULL AUTO_INCREMENT COMMENT '主键',
+      `gmt_create` datetime NOT NULL COMMENT '创建时间',
+      `gmt_modified` datetime NOT NULL COMMENT '修改时间',
+      `destination` varchar(128) DEFAULT NULL COMMENT '通道名称',
+      `binlog_file` varchar(64) DEFAULT NULL COMMENT 'binlog文件名',
+      `binlog_offest` bigint(20) DEFAULT NULL COMMENT 'binlog偏移量',
+      `binlog_master_id` varchar(64) DEFAULT NULL COMMENT 'binlog节点id',
+      `binlog_timestamp` bigint(20) DEFAULT NULL COMMENT 'binlog应用的时间戳',
+      `data` longtext DEFAULT NULL COMMENT '表结构数据',
+      `extra` text DEFAULT NULL COMMENT '额外的扩展信息',
+      PRIMARY KEY (`id`),
+      UNIQUE KEY binlog_file_offest(`destination`,`binlog_master_id`,`binlog_file`,`binlog_offest`),
+      KEY `destination` (`destination`),
+      KEY `destination_timestamp` (`destination`,`binlog_timestamp`),
+      KEY `gmt_modified` (`gmt_modified`)
+    ) ENGINE=InnoDB AUTO_INCREMENT=1 DEFAULT CHARSET=utf8mb4 COMMENT='表结构记录表快照表';
+
+    CREATE TABLE IF NOT EXISTS `meta_history` (
+      `id` bigint(20) unsigned NOT NULL AUTO_INCREMENT COMMENT '主键',
+      `gmt_create` datetime NOT NULL COMMENT '创建时间',
+      `gmt_modified` datetime NOT NULL COMMENT '修改时间',
+      `destination` varchar(128) DEFAULT NULL COMMENT '通道名称',
+      `binlog_file` varchar(64) DEFAULT NULL COMMENT 'binlog文件名',
+      `binlog_offest` bigint(20) DEFAULT NULL COMMENT 'binlog偏移量',
+      `binlog_master_id` varchar(64) DEFAULT NULL COMMENT 'binlog节点id',
+      `binlog_timestamp` bigint(20) DEFAULT NULL COMMENT 'binlog应用的时间戳',
+      `use_schema` varchar(1024) DEFAULT NULL COMMENT '执行sql时对应的schema',
+      `sql_schema` varchar(1024) DEFAULT NULL COMMENT '对应的schema',
+      `sql_table` varchar(1024) DEFAULT NULL COMMENT '对应的table',
+      `sql_text` longtext DEFAULT NULL COMMENT '执行的sql',
+      `sql_type` varchar(256) DEFAULT NULL COMMENT 'sql类型',
+      `extra` text DEFAULT NULL COMMENT '额外的扩展信息',
+      PRIMARY KEY (`id`),
+      UNIQUE KEY binlog_file_offest(`destination`,`binlog_master_id`,`binlog_file`,`binlog_offest`),
+      KEY `destination` (`destination`),
+      KEY `destination_timestamp` (`destination`,`binlog_timestamp`),
+      KEY `gmt_modified` (`gmt_modified`)
+    ) ENGINE=InnoDB AUTO_INCREMENT=1 DEFAULT CHARSET=utf8mb4 COMMENT='表结构变化明细表';
+
+
+    GRANT ALL PRIVILEGES ON `canal\_tsdb`.* TO `canal`@`%`;
+    FLUSH PRIVILEGES;
+    SHOW GRANTS FOR 'canal'@'%';
+---
+
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: canal-mysql
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: canal-mysql
+  template:
+    metadata:
+      labels:
+        app: canal-mysql
+    spec:
+      containers:
+      - name: mysql
+        image: mysql:8.0.40
+        env:
+        - name: MYSQL_ROOT_PASSWORD
+          value: "666666"
+        - name: MYSQL_USER
+          value: canal
+        - name: MYSQL_PASSWORD
+          value: canal
+        ports:
+        - containerPort: 3306
+        volumeMounts:
+        - name: mysql-storage
+          mountPath: /var/lib/mysql
+        - name: custom-init-scripts
+          mountPath: /docker-entrypoint-initdb.d
+      volumes:
+      - name: mysql-storage
+        emptyDir: {}
+      - name: custom-init-scripts
+        configMap:
+          name: canal-mysql-initdb
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: canal-mysql
+spec:
+  selector:
+    app: canal-mysql
+  ports:
+    - port: 3306
+      targetPort: 3306
 ---
 apiVersion: v1
 kind: ConfigMap
@@ -142,8 +244,8 @@ data:
     canal.instance.global.lazy = false
     canal.instance.global.manager.address = ${canal.admin.manager}
     #canal.instance.global.spring.xml = classpath:spring/memory-instance.xml
-    #canal.instance.global.spring.xml = classpath:spring/file-instance.xml
-    canal.instance.global.spring.xml = classpath:spring/default-instance.xml
+    canal.instance.global.spring.xml = classpath:spring/file-instance.xml
+    #canal.instance.global.spring.xml = classpath:spring/default-instance.xml
 
     ##################################################
     ######### 	      MQ Properties      #############
@@ -365,6 +467,14 @@ spec:
               value: rocketMQ
             - name: canal.instance.tsdb.enable
               value: "true"
+            - name: canal.instance.tsdb.url
+              value: "jdbc:mysql://canal-mysql.default.svc.cluster.local:3306/canal_tsdb?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=true"
+            - name: canal.instance.tsdb.dbUsername
+              value: canal
+            - name: canal.instance.tsdb.dbPassword
+              value: canal
+            - name: canal.instance.tsdb.spring.xml
+              value: classpath:spring/tsdb/mysql-tsdb.xml
           ports:
             - containerPort: 11110
               name: tcp-11110
