--- a/usage-demo/compose/instance.properties
+++ b/usage-demo/compose/instance.properties
@@ -8,6 +8,11 @@ canal.instance.gtidon=false
 # position info
 canal.instance.master.address=main-db5:3306
 canal.instance.master.journal.name=mysql-bin.000001
+#######################
+######## for mysql8 ###
+# canal.instance.master.address=main-db8:3306
+# canal.instance.master.journal.name=binlog.000001
+#######################
 canal.instance.master.position=0
 canal.instance.master.timestamp=
 canal.instance.master.gtid=
